--- a/GameDevProject.vcxproj.filters
+++ b/GameDevProject.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="CollisionEvent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="WoodenFloor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp">
@@ -141,6 +144,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CollisionEvent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WoodenFloor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
