--- a/GameDevProject.vcxproj
+++ b/GameDevProject.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="LoadedResources.h" />
     <ClInclude Include="Mushroom.h" />
     <ClInclude Include="Pipe.h" />
+    <ClInclude Include="Plant.h" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="PlayableCharacter.h" />
     <ClInclude Include="QuestionBlock.h" />
@@ -199,6 +200,7 @@
     </ClCompile>
     <ClCompile Include="Mushroom.cpp" />
     <ClCompile Include="Pipe.cpp" />
+    <ClCompile Include="Plant.cpp" />
     <ClCompile Include="Platform.cpp" />
     <ClCompile Include="PlayableCharacter.cpp" />
     <ClCompile Include="QuestionBlock.cpp" />
